# AIRP-State-Protocol

./: .gitignore  CONTRIBUTING.md  LICENSE-APACHE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release-exe.yml  tauri-build.yml
bindings/rust/: Cargo.toml
bindings/rust/src/: lib.rs  main.rs
bindings/typescript/: package.json  tsconfig.json
bindings/typescript/src/: index.ts
docs/: AIRP-架构与状态协议-背景整理.md  PLAN.md  SECURITY.md  extension-points.md  widget-authoring.md
docs/spec/: protocol.md
examples/: downstream.blueprint-set.json  downstream.manifest.json  downstream.state-patch.json  upstream.hello.json  upstream.intent.json
examples/standalone/: README.md  custom-bus.ts  protocol-only.ts  standalone-widget.ts  standalone.test.ts
schema/: airp-state-protocol.schema.json  widget-manifest.schema.json
src/: App.manifest.test.ts  App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bus.rs  main.rs
src/components/: BlueprintRenderer.vue  WidgetHost.vue
src/protocol/: bus-factory.test.ts  bus-factory.ts  bus.ts  e2e-smoke.test.ts  guard.test.ts  guard.ts  tauri-bus.test.ts  tauri-bus.ts  types.ts
src/registry/: consent.test.ts  consent.ts  index.test.ts  index.ts  manifests.test.ts  manifests.ts  registry.test.ts  registry.ts  sandbox-bridge.test.ts  sandbox-bridge.ts  widget-module.ts
src/state/: store.test.ts  store.ts
src/widgets/: CardWidget.vue  ChatWidget.vue  EmotionWidget.vue  InventoryWidget.vue  MapWidget.vue  MemoryWidget.vue  QuestWidget.vue  clock.module.ts  status.module.ts  virtual-window.test.ts  virtual-window.ts
widgets/core/: card.json  chat.json  clock.json  emotion.json  inventory.json  map.json  memory.json  quest.json
