[package]
name = "airp-state-protocol"
version = "0.1.0"
edition = "2021"
authors = ["GhostXia"]
license = "MIT OR Apache-2.0"
description = "AIRP State Protocol — wire types and the AgentBus trait. The contract between an AIRP UI and an AgentBus implementation (e.g. AIRP-Gateway)."
repository = "https://github.com/GhostXia/AIRP-State-Protocol"

[lib]
name = "airp_state_protocol"
path = "src/lib.rs"

# Reference CLI: validates that a JSON document is a well-formed protocol Envelope.
# Built into a Windows .exe by .github/workflows/release-exe.yml (manual trigger).
[[bin]]
name = "airp-protocol"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures = "0.3"
